--- a/starter/index.html
+++ b/starter/index.html
@@ -30,13 +30,25 @@
 
         <main>
             <section class="section-about">
-                <div class="u-center-text u-margin-bottom-8">
+                <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">Exciting tours for adventurous people</h2>
                 </div>
 
                 <div class="row">
                     <div class="col-1-of-2">
-                        text content
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                        <p class="paragraph">
+                            Parley bucko line ye main sheet Shiver me timbers rope's end tack draft Plate Fleet. Starboard clap of thunder chase
+                            guns clipper code of conduct gibbet shrouds gaff jib gabion. Avast six pounders fathom tackle Pirate Round hornswaggle
+                            squiffy to go on account yo-ho-ho wench.
+                        </p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">Live adventurous like you never have before</h3>
+                        <p class="paragraph">
+                            Dead men tell no tales belaying pin furl swab yo-ho-ho rutters grog blossom red ensign port Davy Jones' Locker. Mizzen
+                            hempen halter pirate take a caulk port salmagundi scuttle landlubber.
+                        </p>
+                        <a href="#" class="btn-text">Learn More &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
                         images
