--- a/starter/index.html
+++ b/starter/index.html
@@ -59,6 +59,59 @@
                     </div>
                 </div>
             </section>
+
+            <section class="section-features">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Testing stuff again and again
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Shrouds Nelsons folly take a caulk cutlass port gangway coxswain lee tender weigh anchor. Hands salmagundi
+                                spike piracy.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-map"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Shrouds Nelsons folly take a caulk cutlass port gangway coxswain lee tender weigh anchor. Hands salmagundi
+                                spike piracy
+                                warp brig crow's nest bilge scurvy cutlass. Ho weigh anchor quarter jolly boat bucko come about jib tender
+                                Yellow Jack
+                                avast.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                            <p class="feature-box__text">
+                                Shrouds Nelsons folly take a caulk cutlass port gangway coxswain lee tender weigh anchor. Hands salmagundi
+                                spike piracy
+                                warp brig crow's nest bilge scurvy cutlass. Ho weigh anchor quarter jolly boat bucko come about jib tender
+                                Yellow Jack
+                                avast.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         
         <!--
