added story section

--- a/starter/index.html
+++ b/starter/index.html
@@ -220,6 +220,32 @@
                     <a href="#" class="btn btn--green">Discover all tours</a>
                 </div>
             </section>
+
+            <section class="section-stories">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        We make people genuinely happy
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="../starter/img/nat-8.jpg" alt="person on tour" class="story__img">
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                I had the best week every with my family
+                            </h3>
+                            <p>
+                                Shrouds Nelsons folly take a caulk cutlass port gangway coxswain lee tender weigh anchor. Hands salmagundi
+                                spike piracy. warp brig crow's nest bilge scurvy cutlass. Ho weigh anchor quarter jolly boat bucko come about jib tender
+                                Yellow Jack
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         
         <!--
