--- a/starter/index.html
+++ b/starter/index.html
@@ -222,6 +222,13 @@
             </section>
 
             <section class="section-stories">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="../starter/img/video.mp4" type="video/mp4">
+                        <source src="../starter/img/video.webm" type="video/webm"> 
+                        Your Browser is not supported
+                    </video>
+                </div>
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         We make people genuinely happy
@@ -245,6 +252,30 @@
                             </p>
                         </div>
                     </div>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="../starter/img/nat-9.jpg" alt="person on tour" class="story__img">
+                            <figcaption class="story__caption">Owen Wilson</figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Wow
+                            </h3>
+                            <p>
+                                Shrouds Nelsons folly take a caulk cutlass port gangway coxswain lee tender weigh anchor. Hands
+                                salmagundi
+                                spike piracy. warp brig crow's nest bilge scurvy cutlass. Ho weigh anchor quarter jolly boat bucko come
+                                about jib tender
+                                Yellow Jack
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
             </section>
         </main>
